--- a/97_PFCCS/神経緊急.md
+++ b/97_PFCCS/神経緊急.md
@@ -1,4 +1,4 @@
-# 1. はじめに
+# I. はじめに
 * 大脳の昨日は病理的な状況でも、障害を防ぐ機能が備わっている
   * 中枢神経の恒常性を保つための反射が維持機構として働く
 * 小児の意識変容・低下を認める場合は原因に対する適切な早期治療が鍵
@@ -20,40 +20,78 @@
 * 酸素消費を可能な限り抑える
 ```
 * 神経症状が増悪した場合は呼吸不全を伴っている可能性が高い
-  - さまざまな理由から低換気や気道閉塞などの呼吸不全がｍちおめられる
+  - さまざまな理由から低換気や気道閉塞などの呼吸不全がみとめられる
   - 確実な気道確保を迅速に行う
 * 輸液は脳浮腫の増悪を防ぐために等張液か高張液で
 
 
-# 2. 頭蓋内生理の基礎
+# II. 頭蓋内生理の基礎
 ## A. 頭蓋内圧
 * 脳実質: 80%
 * 血液: 10%
 * 脳脊髄液: 10%
 
-## モンローケリーの法則
+### Monro-Kellieの法則
 * 脳実質 + 脳脊髄液 + 血液 = 一定に保たれる
-* ある程度はplateauだが、あるところで代償起点が破綻して頭蓋内圧が著明に亢進してくる
+* 頭蓋内圧が上昇すると脳脊髄液と静脈血が頭蓋内から押しやられることで圧を一定に保つ代償機構が存在する
+* 乳児は大泉門が開いているため頭蓋内圧が上がりにくくなっているが限界がある
+  - 硬膜は弾力性に乏しい
+    * 頭蓋内容量の増大は妨げられる
+  - 頭蓋脊椎軸が短い
+    - 押しやられてた脳脊髄液や脳血液が転移できるスペースはより少ない
 
+### 1. 脳
+* 痙攣中や高体温時は脳のエネルギー需要が増大する
+* 細胞傷害性浮腫
+  - 細胞の恒常性破綻によって起こる
+  - 高浸透圧治療に対して反応が乏しい
+  - 予後悪い
+- 血管原性浮腫
+  - BBBの透過性亢進が原因
 
-# 3. 脳血流の生理学
+### 2. 脳血流量
+* 動脈の緊張度により脳血流は調整されている
+* 動脈の緊張度上昇 = 脳血流量低下 = 頭蓋内圧低下
+  - 頭蓋内圧を下げるための過換気によるPaCO2低下は短時間にとどめる
+  - 脳虚血のリスクとなる
+
+### 3. 脳脊髄液
+* 神経根・血管・脆弱な膜にかかる張力を弱めるクッションの役割をしている
+* 70%は脈絡叢で産生される
+* 産生速度は年齢を問わず一定で500-600ml/day
+* 5-7時間で入れ替わると言われる
+* 脈絡叢 -> 側脳室 -> 第3脳室 -> 中脳水道 -> 第4脳室 -> 脊髄
+* 脈絡叢 -> くも膜下腔 -> くも膜絨毛 -> 矢状洞 ( 静脈系 )
+* 血症が限外濾過されたもの
+  - 血清や細胞外液と同じ電解質組成
+  - ブドウ糖などは能動輸送で運ばれるため濃度が異なる
+  - 高浸透圧物質による脳浮腫の治療には正常に機能している血液脳関門が必要不可欠
+
+## B. 脳血流
+* 灰白質は代謝がより活発で白質に比べて血流量が多い
+*
 ```
 PaO2↑ 脳血流↓
 PaCO2↓ 脳血流↓
-CPP = MAP+IPP
+CPP = MAP - IPP
 ```
 * 低酸素を防ぐ
 * 高炭酸ガス血症を防ぐ
+  - PaCO2と脳血流量はほぼ比例する
+    - pHとは独立して起こることに注意
   * 適切なCO2は35 mmHgが目安
   * それ以上下げると逆に脳血流落ちる
   * 慢性的なhyperventilationはしない、rescueは可能
 * 血圧を保つ
-
-* 正常脳還流圧 = 平均血圧 - 頭蓋内圧 ( or CVP )
+  - 目安は平均動脈圧の25%
+  - これを下回る高圧は脳虚血を引き起こすため避けるべき
+* 正常脳還流圧 = 平均血圧 - 頭蓋内圧とCVPのどちらか高い方
   * 低血圧になっているときには還流維持に気をつける
   * 正常値: 成人 50-70、小児 50-60、幼児 40-50
+* 体温上昇や痙攣発作でも脳血流量は上昇する
 
-
+# III. 小児の緊急時の神経学的評価
+## A. 意識レベル
 
 # 4. 頭部外傷の挿管
 * 頸部の過伸展せず、頚椎保護をしっかりして挿管する
